# Shop_API

./: .env  app.db  app.py  config.py  oauth.py  pyproject.toml
errors/: handlers.py
libs/: image_helper.py  mailgun.py  strings.py
migrations/versions/: 6aaef0f8cbb5_initial_one.py
models/: confirmation.py  item.py  order.py  store.py  user.py
resources/: confirmation.py  git_login.py  image.py  item.py  order.py  store.py  user.py
schemas/: confirmation.py  image.py  user.py
strings/: en-gb.json
